try fixing lack of momentum scrolling on ios

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -10,6 +10,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
+  -webkit-overflow-scrolling: touch;
   -moz-osx-font-smoothing: grayscale;
   background-image: linear-gradient(135deg, rgb(46, 45, 69), rgb(28, 33, 39));
   color: white;
